# LibraryTicTacToe

./: CMakeLists.txt  main.cpp
.github/workflows/: ci-configuration.yml
lib/: CMakeLists.txt  board.cpp  board.hpp  game.cpp  game.hpp  history.cpp  history.hpp  settings.cpp  settings.hpp
